--- a/poker.css
+++ b/poker.css
@@ -53,7 +53,23 @@ body{
     box-shadow: var(--drop-shadow);
 }
 
-.card.com{
+.card.com1{
+    box-shadow: var(--drop-shadow);
+}
+
+.card.com2{
+    box-shadow: var(--drop-shadow);
+}
+
+.card.com3{
+    box-shadow: var(--drop-shadow);
+}
+
+.card.com4{
+    box-shadow: var(--drop-shadow);
+}
+
+.card.com5{
     box-shadow: var(--drop-shadow);
 }
 
