--- a/poker.css
+++ b/poker.css
@@ -16,6 +16,7 @@ body{
     position:fixed;
     inset:0;
     margin-top:auto;
+    margin-top:50px;
     width:clamp(300px,100%,900px);
     border-spacing:10px;/*表組み内のボーダーの隣り合うセルの境界線の間隔を指定*/
 }
