--- a/poker.css
+++ b/poker.css
@@ -14,9 +14,9 @@ body{
 .field:nth-child(2){
     --drop-shadow:0 10px 25px 0 rgb(0 0 0 / 50%);/*影度合*/
     position:fixed;
+    top:50px;
     inset:0;
     margin-top:auto;
-    padding-top:50px;
     width:clamp(300px,100%,900px);
     border-spacing:10px;/*表組み内のボーダーの隣り合うセルの境界線の間隔を指定*/
 }
