--- a/poker.css
+++ b/poker.css
@@ -14,7 +14,6 @@ body{
 .field:nth-child(2){
     --drop-shadow:0 10px 25px 0 rgb(0 0 0 / 50%);/*影度合*/
     position:fixed;
-    top:50px;
     inset:0;
     margin-top:auto;
     width:clamp(300px,100%,900px);
@@ -23,6 +22,11 @@ body{
 
 .field td{
     position: relative;
+}
+
+.field:nth-child(2) tr:nth-child(5){
+    position: relative;
+    bottom: 50px;
 }
 
 .box29 {
@@ -142,6 +146,7 @@ body{
     margin-top: 50px;
     box-shadow: var(--drop-shadow);
 }
+
 
 .button+.button{
     margin-left: 5px;
