--- a/poker.css
+++ b/poker.css
@@ -14,9 +14,8 @@ body{
 .field:nth-child(2){
     --drop-shadow:0 10px 25px 0 rgb(0 0 0 / 50%);/*影度合*/
     position:fixed;
-    top:20px;
     inset:0;
-    margin-top:auto;
+    margin-top:60px;
     width:clamp(300px,100%,900px);
     border-spacing:10px;/*表組み内のボーダーの隣り合うセルの境界線の間隔を指定*/
 }
