--- a/poker.css
+++ b/poker.css
@@ -139,6 +139,8 @@ body{
     box-shadow: var(--drop-shadow);
 }
 .button{
+    border: 1px solid black;
+    color: black;
     width:100%;
     height: 3em;
     margin-top: 50px;
@@ -150,5 +152,10 @@ body{
     margin-left: 5px;
     margin-right: 5px;
 }
+
+button:disabled {
+    border: 1px solid #999999;
+    color: #999999;
+  }
 
 
