--- a/poker.css
+++ b/poker.css
@@ -23,10 +23,16 @@ body{
 .field td{
     position: relative;
 }
+.field:nth-child(2) tr:nth-child(4){
+    position: relative;
+    bottom: 40px;
+}
 
 .field:nth-child(2) tr:nth-child(5){
     position: relative;
     margin:auto;
+    bottom: 50px;
+    margin: auto;
 }
 
 .box29 {
