--- a/poker.css
+++ b/poker.css
@@ -25,12 +25,12 @@ body{
 }
 .field:nth-child(2) tr:nth-child(4){
     position: relative;
-    bottom: 40px;
+    margin-bottom: 40px;
 }
 
 .field:nth-child(2) tr:nth-child(5){
     position: relative;
-    bottom: 50px;
+   margin-bottom: 50px;
     margin: auto;
 }
 
