--- a/poker.css
+++ b/poker.css
@@ -17,7 +17,7 @@ body{
     inset:0;
     margin-top:50px;
     width:clamp(300px,100%,900px);
-    border-spacing:5px;/*表組み内のボーダーの隣り合うセルの境界線の間隔を指定*/
+    border-spacing:10px;/*表組み内のボーダーの隣り合うセルの境界線の間隔を指定*/
 }
 
 .field td{
@@ -25,12 +25,12 @@ body{
 }
 .field:nth-child(2) tr:nth-child(4){
     position: relative;
-    bottom: 40px;
+    padding-bottom: 40px;
 }
 
 .field:nth-child(2) tr:nth-child(5){
     position: relative;
-    bottom: 50px;
+    padding-bottom: 50px;
     
 }
 
